# csxhair

./: .gitignore  LICENSE  README.md  csxhair.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
csxhair/: __init__.py
