[build-system]
requires = ["setuptools>=68.1.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csxhair"
authors = [
    {name = "SyberiaK"}
]
description = "Decode, edit and encode CS:GO/CS2 crosshairs easily."
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = ["attrs>=23.1.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/SyberiaK/csxhair"
Issues = "https://github.com/SyberiaK/csxhair/issues"

[tool.setuptools.dynamic]
version = {attr = "csxhair.__version__"}

[tool.setuptools.package-data]
hurray = ["py.typed"]